[package]
name = "ai-editor-server"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-identity = { version = "0.5" }
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-web = { version = "4.3" }

chrono = { version = "0.4.20", features = ["serde"] }
derive_more = { version = "0.99.7" }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15"
env_logger = { version = "0.10" }
log = "0.4"
once_cell = "1"
r2d2 = "0.8"
rust-argon2 = "1"
serde_json = { version = "1" }
serde = { version = "1" }
time = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.11" }
openssl = { version = "0.10" }
sendgrid = { version = "0.18" }