[package]
name = "ai-editor-server"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-identity = { version = "0.5" }
actix-session = { version = "0.7", features = ["redis-rs-session"] }
actix-web = { version = "4.3" }
actix-cors = { version = "0.6" }

chrono = { version = "0.4.20", features = ["serde"] }
derive_more = { version = "0.99.7" }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15"
env_logger = { version = "0.10" }
log = "0.4"
once_cell = "1"
r2d2 = "0.8"
rust-argon2 = "1"
serde_json = { version = "1" }
serde = { version = "1" }
time = {version = "0.3"}
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = "0.11"
openssl = { version = "0.10" }
sendgrid = { version = "0.18" }
diesel_migrations = { version = "2.0" }
regex = "1.7.3"
openai_dive = { version = "0.2.3", features = ["stream"] }
tokio = "1.27.0"
tokio-stream = "0.1.12"
futures-util = "0.3.28"
async-stream = "0.3.5"
actix = "0.13.0"
futures = "0.3.28"
crossbeam-channel = "0.5.8"
async-stripe = "0.21.0"
