[package]
name = "trieve-server"
version = "1.0.0"
edition = "2021"
default-run = "trieve-server"

[profile.release]
debug = 0
incremental = true
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"

[[bin]]
name = "trieve-server"
path = "src/main.rs"

[[bin]]
name = "ingestion-worker"
path = "src/bin/ingestion-worker.rs"

[[bin]]
name = "file-worker"
path = "src/bin/file-worker.rs"

[[bin]]
name = "delete-worker"
path = "src/bin/delete-worker.rs"

[[bin]]
name = "redoc_ci"
path = "src/bin/redoc_ci.rs"

[[bin]]
name = "create-new-qdrant"
path = "src/bin/create-new-qdrant.rs"


[dependencies]
actix-identity = { version = "0.7.1" }
actix-session = { version = "0.9.0", features = [
    "redis-rs-session",
    "redis-rs-tls-session",
] }
actix-web = { version = "4.3" }
actix-cors = { version = "0.7" }


async-stripe = { version = "0.37.0", features = [
    "runtime-tokio-hyper",
    "checkout",
    "webhook-events",
    "billing",
] }
chrono = { version = "0.4.20", features = ["serde"] }
derive_more = { version = "0.99.7" }
diesel = { version = "2", features = [
    "uuid",
    "chrono",
    "serde_json",
    "postgres",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
log = "0.4"
once_cell = "1"
rust-argon2 = "2"
serde_json = { version = "1" }
serde = { version = "1" }
time = { version = "0.3" }
uuid = { version = "1", features = ["v4", "serde"] }
diesel_migrations = { version = "2.0" }
regex = "1.7.3"
openai_dive = { git = "https://github.com/devflowinc/openai-client", branch = "openrouter-end_turn-compat", features = [
    "stream",
] }
tokio = "1.27.0"
tokio-stream = "0.1.12"
futures-util = "0.3.28"
async-stream = "0.3.5"
actix = "0.13.0"
futures = "0.3.28"
crossbeam-channel = "0.5.8"
qdrant-client = "1.9.0"
rust-s3 = { version = "0.34.0" }
base64 = "0.22.0"
glob = "0.3.1"
itertools = "0.13.0"
redis = { version = "0.25", features = ["tokio-rustls-comp", "aio"] }
reqwest = { version = "0.12.2", features = ["json"] }
rand = "0.8.5"
dotenvy = "0.15.7"
simsearch = "0.2.4"
lazy_static = { version = "1.4.0" }
actix-files = "0.6.2"
utoipa = { version = "4.2", features = [
    "actix_extras",
    "uuid",
    "chrono",
    "debug",
] }
utoipa-redoc = { version = "4.0", features = ["actix-web"] }
magick_rust = { version = "0.21", optional = true }
pyo3 = { version = "0.21.1", features = [
    "full",
    "auto-initialize",
], optional = true }
openidconnect = { version = "3.4.0", features = [
    "reqwest",
], default-features = false }
oauth2 = "4.4.2"
dateparser = "0.2.1"
cfg-if = "1.0.0"
lettre = "0.11.3"
scraper = "0.19.0"
sentry = { version = "0.34", features = ["tracing"] }
sentry-actix = "0.34"
regex-split = "0.1.0"
simple-server-timing-header = "0.1.1"
ndarray = "0.15.6"
ureq = { version = "2.9.6", features = ["json"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "registry",
] }
sentry-tracing = "0.34"
tokio-postgres = "0.7.10"
postgres-openssl = "0.5.0"
openssl = "0.10.64"
utoipa-swagger-ui = { version = "7.0.1", features = ["actix-web"] }
bb8-redis = "0.15.0"
signal-hook = "0.3.17"
blake3 = "1.5.1"
actix-http = "3.7.0"


[build-dependencies]
dotenvy = "0.15.7"

[features]
default = []
runtime-env = []
ocr = ["dep:pyo3", "dep:magick_rust"]
