[package]
name = "trieve-server"
version = "1.0.0"
edition = "2021"
default-run = "trieve-server"

[profile.release]
debug = 0
incremental = true
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "symbols"
panic = "abort"

[[bin]]
name = "trieve-server"
path = "src/main.rs"

[[bin]]
name = "word-id-cronjob"
path = "src/bin/word-id-cronjob.rs"

[[bin]]
name = "ingestion-worker"
path = "src/bin/ingestion-worker.rs"

[[bin]]
name = "bktree-worker"
path = "src/bin/bktree-worker.rs"

[[bin]]
name = "word-worker"
path = "src/bin/word-worker.rs"

[[bin]]
name = "file-worker"
path = "src/bin/file-worker.rs"

[[bin]]
name = "csv-jsonl-worker"
path = "src/bin/csv-jsonl-worker.rs"

[[bin]]
name = "grupdate-worker"
path = "src/bin/grupdate-worker.rs"

[[bin]]
name = "redoc_ci"
path = "src/bin/redoc_ci.rs"

[[bin]]
name = "create-new-qdrant"
path = "src/bin/create-new-qdrant.rs"

[[bin]]
name = "sync-qdrant"
path = "src/bin/sync-qdrant.rs"

[[bin]]
name = "queue-bm25"
path = "src/bin/queue-bm25-migration.rs"

[[bin]]
name = "reindex-worker"
path = "src/bin/reindex-worker.rs"

[[bin]]
name = "clone-qdrant"
path = "src/bin/clone-qdrant.rs"

[[bin]]
name = "crawl-worker"
path = "src/bin/crawl-worker.rs"

[[bin]]
name = "crawl-cron-job"
path = "src/bin/crawl-cron-job.rs"

[[bin]]
name = "pagefind-worker"
path = "src/bin/pagefind-worker.rs"

[[bin]]
name = "backfill-qdrant-from-pg"
path = "src/bin/backfill-qdrant-from-pg.rs"

[dependencies]
actix-identity = { version = "0.7.1" }
actix-session = { version = "0.9.0", features = [
    "redis-rs-session",
    "redis-rs-tls-session",
] }
actix-web = { version = "4.9" }
actix-cors = { version = "0.7" }


async-stripe = { version = "0.37.1", features = [
    "runtime-tokio-hyper",
    "checkout",
    "webhook-events",
    "billing",
] }
chrono = { version = "0.4.20", features = ["serde"] }
derive_more = { version = "0.99.7", features = ["display"] }
diesel = { version = "2", features = [
    "uuid",
    "chrono",
    "serde_json",
    "postgres",
] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
log = "0.4"
once_cell = "1"
serde_json = { version = "1" }
serde = { version = "1" }
time = { version = "0.3" }
uuid = { version = "1", features = ["v4", "serde", "v5"] }
diesel_migrations = { version = "2.0" }
regex = "1.7.3"
openai_dive = { version = "0.7.1", features = ["stream"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.12"
futures-util = "0.3.28"
actix = "0.13.0"
futures = "0.3.28"
crossbeam-channel = "0.5.8"
qdrant-client = "1.12.1"
rust-s3 = { version = "0.35.1" }
base64 = "0.22.0"
itertools = "0.13.0"
redis = { version = "0.25", features = ["tokio-rustls-comp", "aio"] }
reqwest = { version = "0.12.2", features = ["json"] }
rand = "0.8.5"
dotenvy = "0.15.7"
simsearch = "0.2.4"
lazy_static = "1.4.0"
actix-files = "0.6.2"
utoipa = { version = "4.2", features = [
    "actix_extras",
    "uuid",
    "chrono",
    "debug",
] }
utoipa-redoc = { version = "4.0", features = ["actix-web"] }
openidconnect = { version = "3.4.0", features = [
    "reqwest",
], default-features = false }
oauth2 = "4.4.2"
dateparser = "0.2.1"
lettre = "0.11.3"
scraper = "0.22.0"
regex-split = "0.1.0"
simple-server-timing-header = "0.1.1"
ndarray = "0.15.6"
ureq = { version = "2.9.6", features = ["json", "native-tls", "socks-proxy"] }
native-tls = "0.2.12"
env_logger = "0.11.5"
tokio-postgres = "0.7.10"
postgres-openssl = "0.5.0"
openssl = "0.10.64"
utoipa-swagger-ui = { version = "7.0.1", features = ["actix-web"] }
bb8-redis = "0.15.0"
signal-hook = "0.3.17"
blake3 = "1.5.1"
actix-http = "3.7.0"
clickhouse = { version = "0.12.0", features = ["time", "uuid"] }
prometheus = "0.13.4"
chm = "0.1.16"
murmur3 = "0.5.2"
tantivy = "0.22.0"
flate2 = "1.0.31"
bincode = "1.3"
rayon = "1.10.0"
dashmap = "6.0.1"
oas3 = "0.10.0"
sanitize_html = "0.8.1"
minijinja-embed = "2.2.0"
minijinja = { version = "2.2.0", features = ["loader", "json"] }
hallucination-detection = { version = "0.1.5", default-features = false, optional = true }
broccoli_queue = { version = "0.3.3", features = ["redis"] }
youtube-transcript = { git = "https://github.com/densumesh/summarizer.git" }
bytes = "1.9.0"
pagefind = { version = "1.3.0" }
tl = "0.7.8"

[build-dependencies]
dotenvy = "0.15.7"
minijinja-embed = "2.2.0"
flate2 = "1.0.26"
tar = "0.4.38"
ureq = "2.6.2"
zip = "2.2.1"

[features]
default = []
runtime-env = []
hallucination-detection = ["dep:hallucination-detection"]
ner = ["hallucination-detection?/ner"]
