[package]
name = "tantivy-recovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
    "serde_json",
] }
chrono = { version = "0.4.20", features = ["serde"] }
serde_json = { version = "1" }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
tantivy = "0.21.1"
itertools = "0.12.0"
r2d2 = "0.8.10"
dotenvy = "0.15.7"
tokio = "1.35.0"
