[package]
name = "pdf2md-server"
version = "0.1.0"
edition = "2021"
default-run = "pdf2md-server"

[[bin]]
name = "pdf2md-server"
path = "src/main.rs"

[[bin]]
name = "supervisor-worker"
path = "src/workers/supervisor-worker.rs"

[[bin]]
name = "chunk-worker"
path = "src/workers/chunk-worker.rs"

[dependencies]
utoipa = { version = "5.2.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-redoc = { version = "5.0.0", features = ["actix-web"] }
actix-web = "4.9.0"
serde = "1.0.215"
serde_json = "1.0.132"
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
rust-s3 = "0.35.1"
derive_more = { version = "1.0.0", features = ["display"] }
dotenvy = "0.15.7"
signal-hook = "0.3.17"
redis = { version = "0.27.5", features = ["tokio-rustls-comp", "aio"] }
bb8-redis = "0.17.0"
tokio = "1.41.1"
lazy_static = "1.5.0"
actix-cors = "0.7.0"
reqwest = "0.12.9"
clickhouse = { version = "0.13.1", features = ["time"] }
chm = "0.1.17"
lopdf = "0.34.0"
base64 = "0.22.1"
pdf2image = "0.1.2"
image = "0.25.5"
openai_dive = "0.6.6"
env_logger = "0.11.5"
utoipa-actix-web = "0.1.2"
futures = "0.3.31"
regex = "1.11.1"
minijinja-embed = "2.5.0"
minijinja = { version = "2.5.0", features = ["loader", "json"] }
actix-files = "0.6.6"

[build-dependencies]
dotenvy = "0.15.7"
minijinja-embed = "2.2.0"

[features]
default = []
runtime-env = []
